Renamed and packaged Modules

--- a/embedded-qpid-spring-boot-starter/pom.xml
+++ b/embedded-qpid-spring-boot-starter/pom.xml
@@ -3,6 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+    <name>Embedded QPID :: Starter</name>
 
     <parent>
         <groupId>com.mc.embedded.qpid</groupId>
@@ -12,4 +14,11 @@
 
     <artifactId>embedded-qpid-spring-boot-starter</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.mc.embedded.qpid</groupId>
+            <artifactId>embedded-qpid-spring-boot-autoconfigure</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
