--- a/embedded-qpid-spring-boot-autoconfigure/src/main/resources/qpid-config.json
+++ b/embedded-qpid-spring-boot-autoconfigure/src/main/resources/qpid-config.json
@@ -40,10 +40,12 @@
       ]
     }
   ],
-  "virtualhostnodes" : [ {
-    "name" : "default",
-    "type" : "JSON",
-    "defaultVirtualHostNode" : "true",
-    "virtualHostInitialConfiguration" : "{\"type\" : \"Memory\",\"name\" : \"default\",\"modelVersion\" : \"6.0\"}"
-  } ]
+  "virtualhostnodes": [
+    {
+      "name": "default",
+      "type": "JSON",
+      "defaultVirtualHostNode": "true",
+      "virtualHostInitialConfiguration": "{\"type\" : \"Memory\",\"name\" : \"default\",\"modelVersion\" : \"6.0\"}"
+    }
+  ]
 }
