--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   </modules>
 
   <properties>
-    <spring-boot.verion>2.0.0.RELEASE</spring-boot.verion>
+    <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     <apache-qpid.version>7.0.2</apache-qpid.version>
 
     <maven.compiler.source>1.8</maven.compiler.source>
