--- a/embedded-qpid-spring-boot-autoconfigure/pom.xml
+++ b/embedded-qpid-spring-boot-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.mc.embedded.qpid</groupId>
         <artifactId>embedded-qpid</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>embedded-qpid-spring-boot-autoconfigure</artifactId>
