--- a/embedded-qpid-spring-boot-starter/pom.xml
+++ b/embedded-qpid-spring-boot-starter/pom.xml
@@ -3,9 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <name>Embedded QPID :: Starter</name>
+    <description>Embedded QPID Starter - This is a Spring Boot Starter which automatically runs QPID AMQP in a Spring environment</description>
 
     <parent>
-        <groupId>com.mc.embedded.qpid</groupId>
+        <groupId>net.clintonmagro.embedded.qpid</groupId>
         <artifactId>embedded-qpid</artifactId>
         <version>1.0.1-SNAPSHOT</version>
     </parent>
@@ -14,7 +15,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.mc.embedded.qpid</groupId>
+            <groupId>net.clintonmagro.embedded.qpid</groupId>
             <artifactId>embedded-qpid-spring-boot-autoconfigure</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
