--- a/embedded-qpid-spring-boot-starter/pom.xml
+++ b/embedded-qpid-spring-boot-starter/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>net.clintonmagro.embedded.qpid</groupId>
         <artifactId>embedded-qpid</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>embedded-qpid-spring-boot-starter</artifactId>
