--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>net.clintonmagro.embedded.qpid</groupId>
     <artifactId>embedded-qpid</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
 
     <url>http://maven.apache.org</url>
 
