--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
@@ -44,6 +44,7 @@
 
     <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     <apache-qpid.version>7.0.2</apache-qpid.version>
+    <junit-params.version>1.1.1</junit-params.version>
 
     <jgitflow-plugin.version>1.0-m5.1</jgitflow-plugin.version>
     <nexus-staging-plugin.version>1.6.8</nexus-staging-plugin.version>
@@ -112,6 +113,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>pl.pragmatists</groupId>
+      <artifactId>JUnitParams</artifactId>
+      <version>${junit-params.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
