[RELEASE]Updating develop poms back to pre merge state

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>net.clintonmagro.embedded.qpid</groupId>
   <artifactId>embedded-qpid-spring-boot-starter</artifactId>
-  <version>1.0.5</version>
+  <version>1.0.6-SNAPSHOT</version>
 
   <url>http://maven.apache.org</url>
 
