Added developer information as per maven central requirements

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
     <url>https://github.com/clintonmagro/embedded-qpid-spring-boot-starter.git</url>
   </scm>
 
+  <developers>
+    <developer>
+      <id>clinton.magro</id>
+      <name>Clinton Alistair Magro</name>
+      <email>clintonmagro@gmail.com</email>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+    </developer>
+  </developers>
+
   <distributionManagement>
     <snapshotRepository>
       <id>ossrh</id>
