--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>net.clintonmagro.embedded.qpid</groupId>
   <artifactId>embedded-qpid-spring-boot-starter</artifactId>
-  <version>1.0.7-SNAPSHOT</version>
+  <version>1.0.6</version>
 
   <url>http://maven.apache.org</url>
 
